Bug 1727868 - Make `HTMLEditUtils::IsVisibleBRElement()` stop using `WSRunScanner` r=m_kato

The method may be used for checking a `<br>` element visibility in non-editable
content too.  Therefore, using `WSRunScanner` which is designed for scanning
editable content hits assertions.

The visibility of `<br>` element is considered only with the following
visible thing.  If it's followed only by another or current block boundary,
the `<br>` element is invisible.  But otherwise, it's visible.  So, it needs
to scan following contents to look for first visible thing until reaching
a block boundary.  And it does not need to check its previous content.

Differential Revision: https://phabricator.services.mozilla.com/D123876